--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pythonelectron",
   "version": "1.0.0",
   "description": "",
-  "main": "public/main.js",
+  "main": "public/electron.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
